[package]
name = "threshold-accepting-tsp"
version = "0.1.0"
authors = ["rodrigofvc <rodrigo_velazquez99@ciencias.unam.mx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]
